# RealCore

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  sokol_impl.cpp
src/ai/: OllamaClient.cpp  OllamaClient.h
src/audio/: AudioEngine.cpp  AudioEngine.h
src/core/: Camera.cpp  Camera.h  engine.cpp  engine.h  math.h
src/graphics/: Gizmo.cpp  Gizmo.h  renderer.cpp  renderer.h
src/gui/: FileBrowser.cpp  FileBrowser.h  GuiLayer.cpp  GuiLayer.h
src/physics/: PhysicsWorld.cpp  PhysicsWorld.h
src/platform/: NativeDialogs.cpp  NativeDialogs.h
src/resources/: Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h
src/scene/: Scene.cpp  Scene.h
src/script/: LuaScriptEngine.cpp  LuaScriptEngine.h  ScriptEngine.cpp  ScriptEngine.h
